# NetMap

./: .gitignore  CMakeLists.txt  NOTES.md  README.md  antenna_ctrl.hpp  main.cpp  motor_controller.cpp  motor_controller.hpp  nm_start.service
app_manager/: CMakeLists.txt
app_manager/include/: manager.hpp
app_manager/src/: bindings.cpp  manager.cpp
bindings/: CMakeLists.txt
bindings/src/: bindings.cpp
boot_interface/: main.py
boot_interface/components/: App.py  __init__.py
comms_test/client/: CMakeLists.txt
comms_test/client/src/: client.cpp
comms_test/server/: CMakeLists.txt
comms_test/server/src/: server.cpp
communications/client/: CMakeLists.txt
communications/client/include/: Client.hpp
communications/client/src/: Client.cpp
communications/server/: CMakeLists.txt
communications/server/include/: Server.hpp
communications/server/src/: Server.cpp  main.cpp  server.hpp
gps_test/: CMakeLists.txt
gps_test/src/: byte_reader.cpp  gps_reader.cpp
lim_sw_test/: CMakeLists.txt
lim_sw_test/src/: main.cpp
motor_controls/: CMakeLists.txt
motor_controls/include/: motor_controller.hpp
motor_controls/src/: motor_controller.cpp
rover/src/: Rover.hpp
rover_class/: CMakeLists.txt
rover_class/src/: Rover.hpp
src/: main.cpp  motor_controller.cpp  motor_controller.hpp
user_interface/: App.py  gui.py  interface.py  main.py  requirements.txt
user_interface/boot_interface/components/: AutoPage.py  InitPage.py  ManPage.py
user_interface/components/: App.py  ListFrame.py  NumPad.py
user_interface/components/pages/: AutoPage.py  InitPage.py  ManPage.py  RoverSelect.py
user_interface/ui_pages/: interface.py  ui_pages.toml
user_interface/ui_pages/src/: App.py  AutoPage.py  InitPage.py  ManPage.py  TestPage.py  __init__.py
